--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '20'  # or your preferred version
 
       - name: Install dependencies
-        run: npm install --force
+        run: npm install
 
       - name: Build
         run: npm run build
@@ -27,5 +27,5 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: main
+          branch: gh-pages
           folder: dist
