--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install --force
 
       - name: Build
-        run: npm run build
+        run: VITE_COMMIT_SHA=${{ github.sha }} npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
